@@ -1,5 +1,7 @@
 0.2.8
 - Added reload file action (issue #49)
+- Fixed illegal argument exception (issue #50)
+- Fixed issue with save on close (partial)
 
 0.2.7 (2022-12-08)
 - Added byte array support for some fields for Rider/CLion/GoLand (debug tree child nodes extraction)
